<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/SETTINGS_SCROLLER"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:scrollbars="vertical"
        android:visibility="visible"
        android:layout_marginBottom="15sp"
        android:layout_marginRight="25sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_label"
                android:textColor="@color/colorDarkGreen"
                android:textSize="18sp"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="15sp">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_label"
                    android:textSize="15sp"/>

                    <RadioGroup
                        android:id="@+id/radioGroup1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/default_label"/>

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Theme Option 2"/>

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Theme Option 3"/>

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Theme Option 4"/>

                </RadioGroup>

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_time_label"
                    android:textSize="15sp"
                    android:layout_marginTop="25sp"/>

                <EditText
                    android:id="@+id/timerLength"
                    android:layout_width="150sp"
                    android:layout_marginLeft="15sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="lskjdfklds"
                    android:inputType="number"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:minEms="5"
                    android:text="25"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"/>

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_by_label"
                    android:textSize="15sp"
                    android:layout_marginTop="25sp"/>

                <RadioGroup
                    android:id="@+id/radioGroupOrdering"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioOrderByAlphabetical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Alphabetical"/>

                    <RadioButton
                        android:id="@+id/radioOrderByDueDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Due Date"/>

                    <RadioButton
                        android:id="@+id/radioOrderByTimeLoggedLH"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Time Logged, low to high"/>

                    <RadioButton
                        android:id="@+id/radioOrderByTimeLoggedHL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Time Logged, high to low"/>

                </RadioGroup>

                <Button
                    android:id="@+id/ringtone_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/change_ringtone"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>